
  Users side :
  ------------
    # The HTML directive to not be indexed by search engine has been added.
    # Some validation issues with bulk-edition have been fixed.
      It could be observed when editing several Invoices at once for example.
    # There were permissions issues with EntityFilters & HeaderFilters ;
      public filters could be edited/deleted by users with no app permission.
    # In the "About" page :
        - the IRC address  has been fixed.
        - the version is displayed only when you are authenticated.
    # Apps :
        * Billing :
            - The button to delete Payment Information (on Organisations' detail-views) was broken.
        * Reports :
            - The date filter in the download popup was broken.
        * Mobile :
            - A hard-coded URL pattern has been fixed (to use the reverse pattern matching as usual).
        * Assistants :
            - The code of Alert has been improved (a query is avoided when creating a CremeEntity).

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # Apps :
            * Billing :
                - The conversion view is more robust (the relationship creation could crash).


== Version 2.4.13 ==

  Users side :
  ------------
    # There were several issues with fields configured as required.
      It could notably appeared in quick forms:
        - Fields which were added (because they are not in the default forms) cause a validation error.
        - Fields corresponding to a ForeignKey caused an error 500.
    # The block which displays all relationships, & the configurable blocks related to
      one type of relationship, have been fixed to order more correctly entities.
      It fixes some pagination issues with PostgreSQL.
    # Several issues in the detail-view for property type have been fixed :
        - Global buttons were missing (to go to the configuration page & to create a new type).