@@ -270,6 +270,10 @@ class EnumerableSelect(widgets.Select):
     option_template_name = 'creme_core/forms/widgets/enhanced-option.html'
     create_url = None
 
+    # Set the default debounce delay to 300ms to reduce the number of API calls.
+    # The default value in the JS component is 100ms.
+    ENUMERABLE_DEFAULT_DEBOUNCE_DELAY = 300
+
     def __init__(self, enumerable: EnumerableChoiceSet = None,
                  attrs=None, create_url=None):
         super().__init__(attrs=attrs, choices=())  # TODO: options or ()
@@ -293,8 +297,9 @@ class EnumerableSelect(widgets.Select):
             attrs.update({
                 'data-enum-url': self.enumerable.url,
                 'data-enum-limit': self.enumerable.limit,
-                'data-enum-cache': 'true',
             })
+            attrs.setdefault('data-enum-cache', 'true')
+            attrs.setdefault('data-enum-debounce', self.ENUMERABLE_DEFAULT_DEBOUNCE_DELAY)
 
         attrs['data-allow-clear'] = str(not self.is_required).lower()
 
